--- a/roles/lava-worker/handlers/main.yaml
+++ b/roles/lava-worker/handlers/main.yaml
@@ -4,3 +4,8 @@
   service:
     name: lava-slave
     state: restarted
+
+- name: restart lxc-net
+  service:
+    name: lxc-net
+    state: restarted
