--- a/inventories/lava-servers.ini
+++ b/inventories/lava-servers.ini
@@ -1,4 +1,4 @@
-; lava-master ansible_ssh_user=root ansible_ssh_host=TODO
+lava-master ansible_ssh_user=vagrant ansible_ssh_host=192.168.77.10 ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
 
 [lava-workers]
-; lava-worker1 ansible_ssh_user=root ansible_ssh_host=TODO
+lava-worker1 ansible_ssh_user=vagrant ansible_ssh_host=192.168.77.11 ansible_ssh_private_key_file=~/.vagrant.d/insecure_private_key
